Update Footer. Fix events spacing on lg-xl screens

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -328,3 +328,7 @@
   height: auto;
   z-index: -1;
 }
+
+#blockquote {
+  margin-top: 15rem;
+}
